fix: card contrast bg-color remove

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -33,7 +33,7 @@ body {
 }
 
 #mainCard {
-	transition: background-color 0.5s ease;
+	transition: 0.5s ease;
 }
 
 .textShadow {
